added terms of use
Signed-off-by: Kai Kreuzer <kai@openhab.org>

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ layout: default
 			<li>It serves as a connector to Google Cloud Messaging (GCM) and Apple Push Notifications (APN) for pushing notifications to mobile phone apps.</li>
 			<li>It brings integration possibilities with services that require an OAuth2 authentication against a web server, such as IFTTT or Amazon Alexa Skills.</li>
 		</ul>
-		<p>We are offering this service completely for free. It is meant to allow users to quickly check out its features without having to set up and host a personal instance. Although it is mainly meant as a demonstrator, it is absolutely fine to use it for your production system as well. You must be aware though that we cannot offer any SLAs regarding availability etc, but we promise to keep it up and running to the best of our capabilities.</p>
+		<p>We are offering this service completely for free. It is meant to allow users to quickly check out its features without having to set up and host a personal instance. Although it is mainly meant as a demonstrator, it is absolutely fine to use it for your production system as well. You must be aware though that we cannot offer any SLAs regarding availability etc, but we promise to keep it up and running to the best of our capabilities. Please read our <a href="terms.html">Terms of Use</a> for all details.</p>
         <p>In order to use myopenHAB, you will need to install the openHAB Cloud Connector bundle. Please check the documentation for <a href="https://github.com/openhab/openhab/wiki/openHAB-Cloud-Connector">openHAB 1.8</a> or for <a href="https://github.com/openhab/openhab2-addons/blob/master/addons/io/org.openhab.io.openhabcloud/README.md#openhab-cloud-connector">openHAB 2.0</a>.
+		<p>If you want to use myopenHAB through your native Android and iOS apps, please enter "https://myopenhab.org" as a remote url and your myopenHAB account username and password as credentials.
     </div>
     
 	<!-- Sidebar Widgets Column -->
