added membership call!
Signed-off-by: Kai Kreuzer <kai@openhab.org>

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ layout: default
 		<p>We are offering this service completely for free. It is meant to allow users to quickly check out its features without having to set up and host a personal instance.</p>
 		
 		<p>Although it is mainly meant as a demonstrator, it is absolutely fine to use it for your production system as well. You must be aware though that we cannot offer any SLAs regarding availability etc, but we promise to keep it up and running to the best of our capabilities. Please read our <a href="terms.html">Terms of Use</a> for all details.</p>
+		
+		<p>If you use and love this free service, please consider <a href="http://www.openhabfoundation.org/members/membership.html">becoming a member of the openHAB Foundation</a> or do a <a href="https://www.paypal.me/openHABFoundation">one-time donation</a>, which will allow us to move forward and further work in the interest of the openHAB community!
 	</div>
 	<!-- Sidebar Widgets Column -->
 	<div class="col-md-4">
