updated IFTTT section

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ layout: default
          <img class="img-responsive img-hover" src="/images/ifttt-meets-openhab.jpg" alt="">
     </div>
     <div class="col-md-8">
-    	<h4>IFTTT (available from December 20)</h4>
-		<p>Activating <a href="https://www.ifttt.com">IFTTT</a> integration is easy. Just log in to your IFTTT account and activate the openHAB channel. You will be forwarded to the myopenHAB website to authorize the IFTTT channel connection. Before you start creating IFTTT recipes you need to make sure that you have your runtime configured to expose certain items to myopenHAB. Only those items will be visible to IFTTT. You will also be able to send commands to those items from IFTTT recipes. Items will appear in myopenHAB and thus in IFTTT only after at least one state update has been received by myopenHAB from your runtime.<p>
+    	<h4>IFTTT</h4>
+		<p>Activating <a href="https://www.ifttt.com">IFTTT</a> integration is easy. Just log in to your IFTTT account and activate the openHAB channel. You will be forwarded to the myopenHAB website to authorize the IFTTT channel connection. Before you start creating IFTTT recipes you need to make sure that you have your runtime configured to expose certain items to myopenHAB. Only those items will be visible to IFTTT. You will also be able to send commands to those items from IFTTT Applets. Items will appear in myopenHAB and thus in IFTTT only after at least one state update has been received by myopenHAB from your runtime.<p>
 
 		<p>You can delete the IFTTT authorization token in the myopenHAB "applications" section at any time.
     </div>
