updated Alexa skill information

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@ layout: default
 <hr/>
 <div class="row">
     <div class="col-md-8">
-    	<h4>Amazon Echo (available soon!)</h4>
-		<p>We have submitted the <a href="https://github.com/openhab/openhab-alexa">openHAB Alexa Smart Home skill</a> to Amazon and are waiting for its approval.</p>
-		<p>Once it is available, you can simply activate this skill in your Alexa app. You need to make sure that all items that you want to control through your Amazon Echo are correctly tagged (similar to the <a href="http://docs.openhab.org/addons/io/homekit/readme.html#item-configuration">Homekit integration</a> and that you have enabled remote access in your cloud connector.
+    	<h4>Amazon Echo</h4>
+		<p>We have published an <a href="https://www.amazon.de/openHAB-Foundation/dp/B01MTY7Z5L">openHAB Alexa Smart Home skill</a>, based on <a href="https://github.com/openhab/openhab-alexa">the code</a> that is maintained by the community.</p>
+		<p>You can simply activate this skill in your Alexa app. You need to make sure that all items that you want to control through your Amazon Echo are correctly tagged (similar to the <a href="http://docs.openhab.org/addons/io/homekit/readme.html#item-configuration">Homekit integration</a> and that you have enabled remote access in your cloud connector.
 		<p>The current skill is a pure <a href="https://developer.amazon.com/alexa/smart-home">smart home skill</a>, i.e. it is not required to say "ask openhab", but you can directly say stuff like "turn the table light on".
 		<p>Please note that the Amazon Echo integration only works with openHAB 2.</p>
     </div>
